- added docker container for jobotwar-web